Added <Intro> block

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -1,4 +1,8 @@
+/* Variables
+=================================== */
 $font-PTSans: 'PT Sans', sans-serif;
 $font-Roboto: 'Roboto', sans-serif;
 $color-primary: #fff;
 $color-secondary: #e84c3d;
+$columns: 12;
+$grid-width: 940px;
