--- a/assets/css/blocks/_grid.scss
+++ b/assets/css/blocks/_grid.scss
@@ -1,22 +1,22 @@
 /* Grid
 =================================== */
 @use 'sass:math';
-$columns: 12;
-$grid-width: 940px;
 
 .container {
 	width: 100%;
+	height: 100%;
 	max-width: $grid-width;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 10px;
-	padding-right: 10px;
+	margin: 0 auto;
+	padding: 0 10px;
 }
 
 .row {
 	width: 100%;
+	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
 	margin-left: -10px;
 	margin-right: -10px;
 }
