--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+/* Variables
+=================================== */
+/* Common rules
+================================ */
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -27,21 +31,31 @@ h6 {
   box-sizing: border-box;
 }
 
+/* Helpers
+=========================== */
+.text-center {
+  text-align: center;
+}
+
+/* Grid
+=========================== */
 /* Grid
 =================================== */
 .container {
   width: 100%;
+  height: 100%;
   max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 .row {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   margin-left: -10px;
   margin-right: -10px;
 }
@@ -118,11 +132,18 @@ h6 {
   padding-right: 10px;
 }
 
+/* Blocks
+========================== */
 .header {
   width: 100%;
   height: 100px;
   color: #fff;
-  background: #000;
+  background: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .logo {
@@ -166,9 +187,13 @@ h6 {
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
+  transition: color 0.2s linear;
 }
 .nav__link:last-child {
   margin-right: 0;
+}
+.nav__link:hover {
+  color: #e84c3d;
 }
 
 .login {
@@ -178,6 +203,8 @@ h6 {
   justify-content: center;
 }
 
+/* Buttons
+============================== */
 .btn {
   font-family: "PT Sans", sans-serif;
   font-size: 12px;
@@ -188,9 +215,73 @@ h6 {
   cursor: pointer;
   background-color: transparent;
   border: 0;
+  transition: color 0.2s linear, background 0.2s linear;
 }
 
 .btn__login {
   padding: 15px 30px;
   border: 1px solid #e84c3d;
+}
+.btn__login:hover {
+  color: #e84c3d;
+  background: #fff;
+}
+
+.btn__intro {
+  display: block;
+  margin: 0 auto;
+  padding: 18px 69px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: #e84c3d;
+}
+.btn__intro:hover {
+  color: #e84c3d;
+  background-color: #fff;
+}
+
+.intro {
+  width: 100%;
+  height: 583px;
+  background-color: #2c3039;
+  background-image: url("../images/intro/intro-bg_1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.intro__title {
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 100;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+}
+
+.intro__text {
+  margin: 0 auto 40px;
+  max-width: 480px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fff;
+  text-align: center;
+}
+
+.intro__learn-more {
+  display: block;
+  margin-top: 25px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  transition: color 0.2s linear;
+}
+.intro__learn-more:hover {
+  color: #e84c3d;
 }/*# sourceMappingURL=style.css.map */
