--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,8 @@ h6 {
 
 /* Blocks
 ========================== */
+/* Header
+============================ */
 .header {
   width: 100%;
   height: 100px;
@@ -146,6 +148,8 @@ h6 {
   z-index: 1;
 }
 
+/* Logo
+========================== */
 .logo {
   width: 100%;
   height: 100px;
@@ -170,6 +174,8 @@ h6 {
   color: #e84c3d;
 }
 
+/* Nav
+================================= */
 .nav {
   width: 100%;
   height: 100px;
@@ -196,6 +202,8 @@ h6 {
   color: #e84c3d;
 }
 
+/* Login
+=========================== */
 .login {
   height: 100px;
   display: flex;
@@ -241,6 +249,8 @@ h6 {
   background-color: #fff;
 }
 
+/* Intro
+===================================== */
 .intro {
   width: 100%;
   height: 583px;
@@ -284,4 +294,56 @@ h6 {
 }
 .intro__learn-more:hover {
   color: #e84c3d;
+}
+
+/* Hosting-main-features
+============================== */
+.hosting-main-features {
+  width: 100%;
+  height: 312px;
+  background-color: #2b2f37;
+}
+
+.hosting-main-features__item {
+  width: 100%;
+  height: 312px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition: background 0.2s linear;
+}
+.hosting-main-features__item:hover {
+  background-color: #272b33;
+}
+
+.hosting-main-features__title {
+  margin-top: 40px;
+  margin-bottom: 17px;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.1;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.hosting-main-features__text {
+  margin-bottom: 30px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.25;
+  color: #6f798c;
+  text-align: center;
+}
+
+.hosting-main-features__read-more {
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: #e84c3d;
+  text-align: center;
+  text-transform: uppercase;
 }/*# sourceMappingURL=style.css.map */
