--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,3 +47,5 @@ h6 {
 @import 'blocks/btn';
 @import 'blocks/intro';
 @import 'blocks/hosting-main-features';
+@import 'blocks/domains';
+@import 'blocks/form';
