--- a/assets/css/blocks/_btn.scss
+++ b/assets/css/blocks/_btn.scss
@@ -11,6 +11,7 @@
 	cursor: pointer;
 	background-color: transparent;
 	border: 0;
+	border-radius: 5px;
 
 	transition: color 0.2s linear, background 0.2s linear;
 }
@@ -39,5 +40,18 @@
 	&:hover {
 		color: $color-secondary;
 		background-color: $color-primary;
+	}
+}
+
+.btn__domains {
+	padding: 18px 28px;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+
+	background-color: $color-secondary;
+
+	&:hover {
+		background-color: darken($color-secondary, 10%);
 	}
 }
