--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,10 +54,16 @@ h6 {
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
   margin-left: -10px;
   margin-right: -10px;
+}
+
+.align-items-start {
+  align-items: flex-start !important;
+}
+
+.align-items-center {
+  align-items: center !important;
 }
 
 .col-1 {
@@ -132,6 +138,254 @@ h6 {
   padding-right: 10px;
 }
 
+@media screen and (max-width: 992px) {
+  .col-lg-1 {
+    width: 8.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-2 {
+    width: 16.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-3 {
+    width: 25%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-4 {
+    width: 33.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-5 {
+    width: 41.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-6 {
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-7 {
+    width: 58.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-8 {
+    width: 66.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-9 {
+    width: 75%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-10 {
+    width: 83.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-11 {
+    width: 91.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-lg-12 {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .col-md-1 {
+    width: 8.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-2 {
+    width: 16.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-3 {
+    width: 25%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-4 {
+    width: 33.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-5 {
+    width: 41.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-6 {
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-7 {
+    width: 58.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-8 {
+    width: 66.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-9 {
+    width: 75%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-10 {
+    width: 83.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-11 {
+    width: 91.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-md-12 {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .col-sm-1 {
+    width: 8.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-2 {
+    width: 16.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-3 {
+    width: 25%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-4 {
+    width: 33.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-5 {
+    width: 41.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-6 {
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-7 {
+    width: 58.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-8 {
+    width: 66.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-9 {
+    width: 75%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-10 {
+    width: 83.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-11 {
+    width: 91.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-sm-12 {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .col-xs-1 {
+    width: 8.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-2 {
+    width: 16.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-3 {
+    width: 25%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-4 {
+    width: 33.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-5 {
+    width: 41.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-6 {
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-7 {
+    width: 58.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-8 {
+    width: 66.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-9 {
+    width: 75%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-10 {
+    width: 83.3333333333%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-11 {
+    width: 91.6666666667%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .col-xs-12 {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 /* Blocks
 ========================== */
 /* Header
@@ -223,6 +477,7 @@ h6 {
   cursor: pointer;
   background-color: transparent;
   border: 0;
+  border-radius: 5px;
   transition: color 0.2s linear, background 0.2s linear;
 }
 
@@ -247,6 +502,17 @@ h6 {
 .btn__intro:hover {
   color: #e84c3d;
   background-color: #fff;
+}
+
+.btn__domains {
+  padding: 18px 28px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: #e84c3d;
+}
+.btn__domains:hover {
+  background-color: #d82a1a;
 }
 
 /* Intro
@@ -346,4 +612,100 @@ h6 {
   color: #e84c3d;
   text-align: center;
   text-transform: uppercase;
+  transition: color 0.2s linear;
+}
+.hosting-main-features__read-more:hover {
+  color: #fff;
+}
+
+/* Domains
+=============================== */
+.domains {
+  width: 100%;
+  height: 424px;
+  color: #000;
+  background-color: #fff;
+}
+
+.domains__title {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 0.5;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.domains__text {
+  max-width: 600px;
+  margin: 0 auto 35px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.25;
+  text-align: center;
+}
+
+.domains__img {
+  display: block;
+  margin: 0 auto;
+}
+
+.domains__step {
+  margin-bottom: 10px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.3;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.domains__step-description {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #5e5e5e;
+  text-align: left;
+}
+
+/* Form
+========================== */
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.form__group {
+  height: 70px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  background: #000 url("../images/form-bg.jpg") no-repeat center/cover;
+}
+
+.input {
+  height: 50px;
+  width: 400px;
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  border: 0;
+  outline: 0;
+}
+
+.select {
+  height: 50px;
+  width: 80px;
+  padding: 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  border: 0;
+  outline: 0;
 }/*# sourceMappingURL=style.css.map */
