--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -708,4 +708,45 @@ h6 {
   font-weight: 400;
   border: 0;
   outline: 0;
+}
+
+.features {
+  width: 100%;
+  height: 450px;
+  background-color: #2c3039;
+}
+
+.features__title {
+  margin-top: 70px;
+  font-size: 40px;
+  font-weight: 300;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  line-height: 1.2;
+  text-align: center;
+}
+
+.features__img {
+  display: block;
+  margin: 0 auto;
+}
+
+.features__item-title {
+  margin-bottom: 5px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.25;
+  color: #fff;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.features__item-text {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #98a3a3;
+  text-align: left;
 }/*# sourceMappingURL=style.css.map */
