--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,3 +50,5 @@ h6 {
 @import 'blocks/domains';
 @import 'blocks/form';
 @import 'blocks/features';
+@import 'blocks/plan';
+@import 'blocks/plan-item';
