--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,14 @@ h6 {
   text-align: center;
 }
 
+.p-0 {
+  padding: 0 !important;
+}
+
+.border-0 {
+  border: none !important;
+}
+
 /* Grid
 =========================== */
 /* Grid
@@ -64,6 +72,10 @@ h6 {
 
 .align-items-center {
   align-items: center !important;
+}
+
+.justify-content-center {
+  justify-content: center;
 }
 
 .col-1 {
@@ -515,6 +527,27 @@ h6 {
   background-color: #d82a1a;
 }
 
+.btn--plan-item {
+  width: 80%;
+  padding: 18px 20px;
+  margin-bottom: 15px;
+  margin-top: 20px;
+  font-size: 14px;
+  font-weight: 700;
+  background-color: #2c3039;
+}
+.btn--plan-item:hover {
+  background-color: #e84c3d;
+}
+
+.btn--red {
+  background-color: #e84c3d;
+}
+.btn--red:hover {
+  color: #e84c3d;
+  background-color: #fff;
+}
+
 /* Intro
 ===================================== */
 .intro {
@@ -749,4 +782,126 @@ h6 {
   line-height: 1.4;
   color: #98a3a3;
   text-align: left;
+}
+
+.plan {
+  width: 100%;
+  background-color: #fff;
+}
+
+.plan__title {
+  margin-top: 80px;
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 1;
+  color: #000;
+  text-align: center;
+}
+
+.plan__text {
+  margin-bottom: 40px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.25;
+  color: #000;
+  text-align: center;
+}
+
+.plan__link {
+  color: #e74c3c;
+  transition: color 0.2s linear;
+}
+.plan__link:hover {
+  color: #a82315;
+}
+
+.plan-item {
+  margin-bottom: 50px;
+  color: #2c3039;
+  text-align: center;
+  border: 1px solid rgba(190, 190, 190, 0.5);
+}
+
+.plan-item__title {
+  margin-bottom: 5px;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 0.9;
+  text-transform: uppercase;
+}
+
+.plan-item__description {
+  position: relative;
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+.plan-item__description::after {
+  content: "";
+  width: 80%;
+  height: 1px;
+  background-color: rgba(190, 190, 190, 0.5);
+  position: absolute;
+  left: 10%;
+  bottom: -15px;
+  z-index: 1;
+}
+
+.plan-item__price {
+  margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 0.4;
+  color: #000;
+}
+.plan-item__price span {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+.plan-item__price sup {
+  font-size: 25px;
+}
+
+.plan-item__option {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 2.1;
+}
+.plan-item__option span {
+  font-weight: 400;
+  color: #5e5e5e;
+}
+
+.plan-item__header,
+.plan-item__body {
+  background-color: #fff;
+}
+
+.plan-item__header {
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+
+.plan-item__body {
+  padding-top: 30px;
+}
+
+.plan-item__header--dark {
+  color: #fff;
+  background-color: #e84c3d;
+}
+
+.plan-item__body--dark {
+  color: #fff;
+  background-color: #2c3039;
+}
+.plan-item__body--dark span, .plan-item__body--dark sup, .plan-item__body--dark .plan-item__price {
+  color: #fff;
 }/*# sourceMappingURL=style.css.map */
