--- a/assets/css/blocks/_features.scss
+++ b/assets/css/blocks/_features.scss
@@ -1,12 +1,13 @@
 .features {
 	width: 100%;
-	height: 450px;
+	padding-bottom: 100px;
+	padding-top: 70px;
 
 	background-color: #2c3039;
 }
 
 .features__title {
-	margin-top: 70px;
+	margin-bottom: 45px;
 
 	font-size: 40px;
 	font-weight: 300;
