--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,12 +745,13 @@ h6 {
 
 .features {
   width: 100%;
-  height: 450px;
+  padding-bottom: 100px;
+  padding-top: 70px;
   background-color: #2c3039;
 }
 
 .features__title {
-  margin-top: 70px;
+  margin-bottom: 45px;
   font-size: 40px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
