--- a/assets/css/blocks/_domains.scss
+++ b/assets/css/blocks/_domains.scss
@@ -2,14 +2,14 @@
 =============================== */
 .domains {
 	width: 100%;
-	height: 424px;
+	padding-top: 50px;
+	padding-bottom: 60px;
 
 	color: #000;
 	background-color: $color-primary;
 }
 
 .domains__title {
-	margin-top: 50px;
 	margin-bottom: 30px;
 
 	font-family: $font-Roboto;
