--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,13 +655,13 @@ h6 {
 =============================== */
 .domains {
   width: 100%;
-  height: 424px;
+  padding-top: 50px;
+  padding-bottom: 60px;
   color: #000;
   background-color: #fff;
 }
 
 .domains__title {
-  margin-top: 50px;
   margin-bottom: 30px;
   font-family: "Roboto", sans-serif;
   font-size: 40px;
@@ -710,6 +710,7 @@ h6 {
 .form {
   display: flex;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .form__group {
