--- a/assets/css/blocks/_hosting-main-features.scss
+++ b/assets/css/blocks/_hosting-main-features.scss
@@ -2,14 +2,13 @@
 ============================== */
 .hosting-main-features {
 	width: 100%;
-	height: 312px;
 
 	background-color: #2b2f37;
 }
 
 .hosting-main-features__item {
 	width: 100%;
-	height: 312px;
+	padding: 60px 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
