--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,13 +599,12 @@ h6 {
 ============================== */
 .hosting-main-features {
   width: 100%;
-  height: 312px;
   background-color: #2b2f37;
 }
 
 .hosting-main-features__item {
   width: 100%;
-  height: 312px;
+  padding: 60px 0;
   display: flex;
   align-items: center;
   justify-content: center;
