--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -905,4 +905,60 @@ h6 {
 }
 .plan-item__body--dark span, .plan-item__body--dark sup, .plan-item__body--dark .plan-item__price {
   color: #fff;
+}
+
+.testimonials {
+  width: 100%;
+  padding: 45px 0;
+}
+
+.testimonials__title {
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 0.75;
+  color: #000;
+  text-align: center;
+}
+
+.testimonials__subtitle {
+  margin-bottom: 40px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.9;
+  color: #000;
+  text-align: center;
+}
+
+.testimonials__logo {
+  display: block;
+  margin: 0 auto 35px;
+}
+
+.testimonials__text {
+  max-width: 755px;
+  margin: 0 auto 25px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #000;
+  text-align: center;
+}
+
+.testimonials__img {
+  display: block;
+  margin: 0 auto 25px;
+}
+
+.testimonials__author {
+  margin-bottom: 50px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #5e5e5e;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
