Added <Blog> block

--- a/assets/css/blocks/_btn.scss
+++ b/assets/css/blocks/_btn.scss
@@ -80,3 +80,19 @@
 		background-color: $color-primary;
 	}
 }
+
+.btn--blog {
+	display: block;
+	width: 218px;
+	padding: 18px 20px;
+	margin: 50px auto 0;
+
+	font-size: 14px;
+	font-weight: 700;
+
+	background-color: #2c3039;
+
+	&:hover {
+		background-color: $color-secondary;
+	}
+}
