--- a/assets/css/blocks/_grid.scss
+++ b/assets/css/blocks/_grid.scss
@@ -19,6 +19,15 @@
 	margin-right: -10px;
 }
 
+.row--blur {
+	opacity: 0.3;
+	transition: opacity 0.3 linear;
+
+	&:hover {
+		opacity: 1;
+	}
+}
+
 .align-items-start {
 	align-items: flex-start !important;
 }
