--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,14 @@ h6 {
   margin-right: -10px;
 }
 
+.row--blur {
+  opacity: 0.3;
+  transition: opacity 0.3 linear;
+}
+.row--blur:hover {
+  opacity: 1;
+}
+
 .align-items-start {
   align-items: flex-start !important;
 }
@@ -548,6 +556,19 @@ h6 {
   background-color: #fff;
 }
 
+.btn--blog {
+  display: block;
+  width: 218px;
+  padding: 18px 20px;
+  margin: 50px auto 0;
+  font-size: 14px;
+  font-weight: 700;
+  background-color: #2c3039;
+}
+.btn--blog:hover {
+  background-color: #e84c3d;
+}
+
 /* Intro
 ===================================== */
 .intro {
@@ -665,7 +686,8 @@ h6 {
   font-family: "Roboto", sans-serif;
   font-size: 40px;
   font-weight: 300;
-  line-height: 0.5;
+  line-height: 1;
+  color: #000;
   text-align: center;
   text-transform: capitalize;
 }
@@ -799,6 +821,7 @@ h6 {
   line-height: 1;
   color: #000;
   text-align: center;
+  text-transform: capitalize;
 }
 
 .plan__text {
@@ -961,4 +984,78 @@ h6 {
   line-height: 1.6;
   color: #5e5e5e;
   text-align: center;
+}
+
+.blog {
+  width: 100%;
+  padding: 40px 0 60px;
+}
+
+.blog__title {
+  margin-bottom: 50px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 1;
+  color: #000;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.article {
+  padding: 20px 20px;
+}
+
+.article__line {
+  width: 100%;
+  height: 1px;
+  background-color: #f7f8fa;
+}
+
+.article__title {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #000;
+  line-height: 1.3;
+  text-align: left;
+}
+
+.article__date {
+  margin-right: 30px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2.5;
+  color: #5e5e5e;
+}
+
+.article__comments,
+.article__likes {
+  margin-right: 20px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  color: #000;
+  line-height: 2.5;
+}
+
+.article__content {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+  color: #000;
+}
+
+.article__img {
+  display: block;
+  width: 100%;
+}
+
+.article__link {
+  color: #e84c3d;
+}
+.article__link:hover {
+  color: #d82a1a;
 }/*# sourceMappingURL=style.css.map */
