--- a/assets/css/blocks/_testimonials.scss
+++ b/assets/css/blocks/_testimonials.scss
@@ -42,6 +42,8 @@
 .testimonials__img {
 	display: block;
 	margin: 0 auto 25px;
+
+	border-radius: 50%;
 }
 .testimonials__author {
 	margin-bottom: 50px;
