--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,14 @@ h6 {
   border: none !important;
 }
 
+.blur-effect {
+  opacity: 0.3;
+  transition: opacity 0.3s linear;
+}
+.blur-effect:hover {
+  opacity: 1;
+}
+
 /* Grid
 =========================== */
 /* Grid
@@ -64,14 +72,6 @@ h6 {
   flex-wrap: wrap;
   margin-left: -10px;
   margin-right: -10px;
-}
-
-.row--blur {
-  opacity: 0.3;
-  transition: opacity 0.3 linear;
-}
-.row--blur:hover {
-  opacity: 1;
 }
 
 .align-items-start {
@@ -974,6 +974,7 @@ h6 {
 .testimonials__img {
   display: block;
   margin: 0 auto 25px;
+  border-radius: 50%;
 }
 
 .testimonials__author {
@@ -1058,4 +1059,80 @@ h6 {
 }
 .article__link:hover {
   color: #d82a1a;
+}
+
+.contacts {
+  position: relative;
+  z-index: 1;
+}
+.contacts > iframe {
+  opacity: 0.3;
+  transition: opacity 0.3s linear;
+}
+.contacts > iframe:hover {
+  opacity: 1;
+}
+
+.contacts__inner {
+  max-width: 440px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  z-index: 2;
+  transform: translateY(-50%);
+}
+
+.contacts__title {
+  margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 30px;
+  font-weight: 300;
+  line-height: 1.3;
+  color: #000;
+}
+
+.contacts__address {
+  margin-bottom: 50px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.1;
+  color: #000;
+  font-style: normal;
+}
+
+.contacts__time {
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #000;
+}
+
+.contacts__tel {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.25;
+  color: #000;
+  text-decoration: none;
+}
+.contacts__tel:hover {
+  text-decoration: underline;
+}
+
+.contacts__mail {
+  margin-left: 40px;
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.25;
+  color: #e84c3d;
+  text-decoration: none;
+}
+.contacts__mail:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=style.css.map */
