Added <Subscribe> block

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -4,5 +4,6 @@ $font-PTSans: 'PT Sans', sans-serif;
 $font-Roboto: 'Roboto', sans-serif;
 $color-primary: #fff;
 $color-secondary: #e84c3d;
+$color-third: #2c3039;
 $columns: 12;
 $grid-width: 940px;
