--- a/assets/css/blocks/_btn.scss
+++ b/assets/css/blocks/_btn.scss
@@ -11,7 +11,6 @@
 	cursor: pointer;
 	background-color: transparent;
 	border: 0;
-	border-radius: 5px;
 
 	transition: color 0.2s linear, background 0.2s linear;
 }
@@ -94,5 +93,21 @@
 
 	&:hover {
 		background-color: $color-secondary;
+	}
+}
+
+.btn--subscribe {
+	width: 80px;
+	height: 40px;
+	padding: 12px 20px;
+
+	font-size: 12px;
+	font-weight: 700;
+	text-transform: uppercase;
+
+	background-color: $color-secondary;
+
+	&:hover {
+		background-color: darken($color-secondary, 10%);
 	}
 }
