--- a/assets/css/blocks/_header.scss
+++ b/assets/css/blocks/_header.scss
@@ -9,8 +9,14 @@
 	background: transparent;
 	border-bottom: 1px solid rgba($color-primary, 0.1);
 
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 100;
+}
+
+.header--fixed {
+	position: fixed;
+
+	background-color: $color-third;
 }
