--- a/assets/css/blocks/_logo.scss
+++ b/assets/css/blocks/_logo.scss
@@ -3,9 +3,12 @@
 .logo {
 	width: 100%;
 	height: 100px;
+
 	display: flex;
 	align-items: center;
 	justify-content: start;
+
+	text-decoration: none;
 }
 
 .logo__img {
