--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,10 +416,15 @@ h6 {
   color: #fff;
   background: transparent;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 100;
+}
+
+.header--fixed {
+  position: fixed;
+  background-color: #2c3039;
 }
 
 /* Logo
@@ -430,6 +435,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: start;
+  text-decoration: none;
 }
 
 .logo__img {
