Added <Testimonials Slider>

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,9 @@ h6 {
 *::before {
 	box-sizing: border-box;
 }
+/* Vendors
+============================ */
+@import 'vendor/slick';
 /* Helpers
 =========================== */
 @import '_helpers';
