--- a/assets/css/blocks/_testimonials.scss
+++ b/assets/css/blocks/_testimonials.scss
@@ -3,6 +3,15 @@
 	padding: 45px 0;
 }
 
+.testimonials__slider {
+	height: 327px;
+	overflow: hidden;
+
+	& .slick-initialized {
+		height: auto;
+	}
+}
+
 .testimonials__title {
 	margin-bottom: 20px;
 
@@ -42,6 +51,8 @@
 .testimonials__img {
 	display: block;
 	margin: 0 auto 25px;
+	width: 80px;
+	height: 80px;
 
 	border-radius: 50%;
 }
@@ -54,4 +65,42 @@
 	line-height: 1.6;
 	color: #5e5e5e;
 	text-align: center;
+}
+
+.slick-dots {
+	display: flex;
+	justify-content: center;
+
+	width: 100%;
+	margin: 0;
+	padding: 0;
+
+	list-style: none;
+
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	z-index: 2;
+
+	button {
+		width: 15px;
+		height: 15px;
+		padding: 0;
+
+		background: #ececee;
+		border-radius: 50%;
+		border: 0;
+		cursor: pointer;
+
+		font-size: 0;
+		color: transparent;
+	}
+
+	& .slick-active button {
+		background: $color-third;
+	}
+
+	li {
+		margin: 0 10px;
+	}
 }
