--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,94 @@ h6 {
   box-sizing: border-box;
 }
 
+/* Vendors
+============================ */
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.slick-list:focus {
+  outline: none;
+}
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slick-track:before, .slick-track:after {
+  content: "";
+  display: table;
+}
+.slick-track:after {
+  clear: both;
+}
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+[dir=rtl] .slick-slide {
+  float: right;
+}
+.slick-slide img {
+  display: block;
+}
+.slick-slide.slick-loading img {
+  display: none;
+}
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+.slick-initialized .slick-slide {
+  display: block;
+}
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
 /* Helpers
 =========================== */
 .text-center {
@@ -973,6 +1061,14 @@ h6 {
   padding: 45px 0;
 }
 
+.testimonials__slider {
+  height: 327px;
+  overflow: hidden;
+}
+.testimonials__slider .slick-initialized {
+  height: auto;
+}
+
 .testimonials__title {
   margin-bottom: 20px;
   font-family: "Roboto", sans-serif;
@@ -1012,6 +1108,8 @@ h6 {
 .testimonials__img {
   display: block;
   margin: 0 auto 25px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
 }
 
@@ -1025,9 +1123,39 @@ h6 {
   text-align: center;
 }
 
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+.slick-dots button {
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  background: #ececee;
+  border-radius: 50%;
+  border: 0;
+  cursor: pointer;
+  font-size: 0;
+  color: transparent;
+}
+.slick-dots .slick-active button {
+  background: #2c3039;
+}
+.slick-dots li {
+  margin: 0 10px;
+}
+
 .blog {
   width: 100%;
-  padding: 40px 0 60px;
+  padding-bottom: 60px;
 }
 
 .blog__title {
