--- a/assets/css/blocks/_intro.scss
+++ b/assets/css/blocks/_intro.scss
@@ -3,11 +3,67 @@
 .intro {
 	width: 100%;
 	height: 583px;
+	position: relative;
+
+	& .slick-dots {
+		display: flex;
+		justify-content: center;
+
+		width: 100%;
+		margin: 0;
+		padding: 0;
+
+		list-style: none;
+
+		position: absolute;
+		bottom: 35px;
+		right: 0;
+		z-index: 2;
+
+		button {
+			width: 15px;
+			height: 15px;
+			padding: 0;
+
+			background: $color-primary;
+			border-radius: 50%;
+			border: 0;
+			cursor: pointer;
+
+			font-size: 0;
+			color: transparent;
+		}
+
+		& .slick-active button {
+			background: $color-secondary;
+			border: 3px solid $color-primary;
+		}
+
+		li {
+			margin: 0 10px;
+		}
+	}
+}
+
+.intro__slider {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 
 	background-color: #2c3039;
-	background-image: url('../images/intro/intro-bg_1.jpg');
+	background-image: url('../images/intro/intro-bg-1.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
+.intro__inner {
+	position: relative;
+	z-index: 2;
 }
 
 .intro__title {
@@ -20,6 +76,7 @@
 	color: $color-primary;
 	text-align: center;
 }
+
 .intro__text {
 	margin: 0 auto 40px;
 	max-width: 480px;
