--- a/assets/css/blocks/_testimonials.scss
+++ b/assets/css/blocks/_testimonials.scss
@@ -1,6 +1,45 @@
 .testimonials {
 	width: 100%;
 	padding: 45px 0;
+
+	& .slick-dots {
+		display: flex;
+		justify-content: center;
+
+		width: 100%;
+		margin: 0;
+		padding: 0;
+
+		list-style: none;
+
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		z-index: 2;
+
+		button {
+			width: 15px;
+			height: 15px;
+			padding: 0;
+
+			background: #ececee;
+			border-radius: 50%;
+			border: 0;
+			cursor: pointer;
+
+			font-size: 0;
+			color: transparent;
+		}
+
+		& .slick-active button {
+			background: $color-third;
+			border: 3px solid #ececee;
+		}
+
+		li {
+			margin: 0 10px;
+		}
+	}
 }
 
 .testimonials__slider {
@@ -65,42 +104,4 @@
 	line-height: 1.6;
 	color: #5e5e5e;
 	text-align: center;
-}
-
-.slick-dots {
-	display: flex;
-	justify-content: center;
-
-	width: 100%;
-	margin: 0;
-	padding: 0;
-
-	list-style: none;
-
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	z-index: 2;
-
-	button {
-		width: 15px;
-		height: 15px;
-		padding: 0;
-
-		background: #ececee;
-		border-radius: 50%;
-		border: 0;
-		cursor: pointer;
-
-		font-size: 0;
-		color: transparent;
-	}
-
-	& .slick-active button {
-		background: $color-third;
-	}
-
-	li {
-		margin: 0 10px;
-	}
 }
