--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -680,10 +680,56 @@ h6 {
 .intro {
   width: 100%;
   height: 583px;
+  position: relative;
+}
+.intro .slick-dots {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  bottom: 35px;
+  right: 0;
+  z-index: 2;
+}
+.intro .slick-dots button {
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  background: #fff;
+  border-radius: 50%;
+  border: 0;
+  cursor: pointer;
+  font-size: 0;
+  color: transparent;
+}
+.intro .slick-dots .slick-active button {
+  background: #e84c3d;
+  border: 3px solid #fff;
+}
+.intro .slick-dots li {
+  margin: 0 10px;
+}
+
+.intro__slider {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   background-color: #2c3039;
-  background-image: url("../images/intro/intro-bg_1.jpg");
+  background-image: url("../images/intro/intro-bg-1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.intro__inner {
+  position: relative;
+  z-index: 2;
 }
 
 .intro__title {
@@ -1060,6 +1106,36 @@ h6 {
   width: 100%;
   padding: 45px 0;
 }
+.testimonials .slick-dots {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+.testimonials .slick-dots button {
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  background: #ececee;
+  border-radius: 50%;
+  border: 0;
+  cursor: pointer;
+  font-size: 0;
+  color: transparent;
+}
+.testimonials .slick-dots .slick-active button {
+  background: #2c3039;
+  border: 3px solid #ececee;
+}
+.testimonials .slick-dots li {
+  margin: 0 10px;
+}
 
 .testimonials__slider {
   height: 327px;
@@ -1121,36 +1197,6 @@ h6 {
   line-height: 1.6;
   color: #5e5e5e;
   text-align: center;
-}
-
-.slick-dots {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 2;
-}
-.slick-dots button {
-  width: 15px;
-  height: 15px;
-  padding: 0;
-  background: #ececee;
-  border-radius: 50%;
-  border: 0;
-  cursor: pointer;
-  font-size: 0;
-  color: transparent;
-}
-.slick-dots .slick-active button {
-  background: #2c3039;
-}
-.slick-dots li {
-  margin: 0 10px;
 }
 
 .blog {
