--- a/assets/css/blocks/_intro.scss
+++ b/assets/css/blocks/_intro.scss
@@ -4,6 +4,9 @@
 	width: 100%;
 	height: 583px;
 	position: relative;
+	overflow: hidden;
+
+	background-color: $color-third;
 
 	& .slick-dots {
 		display: flex;
@@ -46,19 +49,26 @@
 }
 
 .intro__slider {
+	display: none;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 
-	background-color: #2c3039;
-	background-image: url('../images/intro/intro-bg-1.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
+	background: $color-third;
 
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 1;
+
+	& .slick-list,
+	& .slick-track {
+		height: 100%;
+	}
+
+	&.slick-initialized {
+		display: block;
+	}
 }
 
 .intro__inner {
