--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -681,6 +681,8 @@ h6 {
   width: 100%;
   height: 583px;
   position: relative;
+  overflow: hidden;
+  background-color: #2c3039;
 }
 .intro .slick-dots {
   display: flex;
@@ -714,17 +716,21 @@ h6 {
 }
 
 .intro__slider {
+  display: none;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #2c3039;
-  background-image: url("../images/intro/intro-bg-1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: #2c3039;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
+}
+.intro__slider .slick-list, .intro__slider .slick-track {
+  height: 100%;
+}
+.intro__slider.slick-initialized {
+  display: block;
 }
 
 .intro__inner {
@@ -1140,6 +1146,7 @@ h6 {
 .testimonials__slider {
   height: 327px;
   overflow: hidden;
+  background: #fff;
 }
 .testimonials__slider .slick-initialized {
   height: auto;
