--- a/assets/css/blocks/_hosting-main-features.scss
+++ b/assets/css/blocks/_hosting-main-features.scss
@@ -43,6 +43,11 @@
 	color: #6f798c;
 	text-align: center;
 }
+
+.hosting-main-features__img {
+	height: 49px;
+}
+
 .hosting-main-features__read-more {
 	font-family: $font-PTSans;
 	font-size: 12px;
