--- a/assets/css/blocks/_testimonials.scss
+++ b/assets/css/blocks/_testimonials.scss
@@ -53,6 +53,13 @@
 	}
 }
 
+.testimonials__item {
+	height: 327px;
+	overflow: hidden;
+
+	background-color: #fff;
+}
+
 .testimonials__title {
 	margin-bottom: 20px;
 
