Added <Media> queries and <Burger> menu buttom

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -7,3 +7,8 @@ $color-secondary: #e84c3d;
 $color-third: #2c3039;
 $columns: 12;
 $grid-width: 940px;
+
+$breakpoint-992: '(max-width: 992px)';
+$breakpoint-768: '(max-width: 768px)';
+$breakpoint-576: '(max-width: 575px)';
+$breakpoint-400: '(max-width: 400px)';
