--- a/assets/css/blocks/_nav.scss
+++ b/assets/css/blocks/_nav.scss
@@ -6,6 +6,10 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+
+	@media #{$breakpoint-992} {
+		display: none;
+	}
 }
 
 .nav__link {
