--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,6 @@ h6 {
 }
 
 .row {
-  width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -171,7 +170,13 @@ h6 {
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
+}
+
+@media (max-width: 768px) {
+  .md-display-none {
+    display: none;
+  }
 }
 
 .col-1 {
@@ -306,6 +311,18 @@ h6 {
     width: 100%;
     padding-left: 10px;
     padding-right: 10px;
+  }
+  .lg-order-1 {
+    order: 1;
+  }
+  .lg-order-2 {
+    order: 2;
+  }
+  .lg-order-3 {
+    order: 3;
+  }
+  .lg-order-4 {
+    order: 4;
   }
 }
 @media screen and (max-width: 768px) {
@@ -525,10 +542,22 @@ h6 {
   justify-content: start;
   text-decoration: none;
 }
+@media (max-width: 992px) {
+  .logo {
+    justify-content: center;
+  }
+}
 
 .logo__img {
   display: block;
+  width: 100%;
+  max-width: 56px;
   margin-right: 20px;
+}
+@media (max-width: 400px) {
+  .logo__img {
+    display: none;
+  }
 }
 
 .logo__text {
@@ -541,6 +570,11 @@ h6 {
 .logo__text span {
   color: #e84c3d;
 }
+@media (max-width: 575px) {
+  .logo__text {
+    font-size: 14px;
+  }
+}
 
 /* Nav
 ================================= */
@@ -550,6 +584,11 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+@media (max-width: 992px) {
+  .nav {
+    display: none;
+  }
 }
 
 .nav__link {
@@ -570,13 +609,59 @@ h6 {
   color: #e84c3d;
 }
 
+/* Burger
+======================= */
+.burger {
+  display: none;
+  padding: 9px 2px;
+  background: none;
+  border: 0;
+  cursor: pointer;
+}
+@media (max-width: 992px) {
+  .burger {
+    display: block;
+  }
+}
+
+.burger-item {
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  font-size: 0;
+  color: transparent;
+  cursor: pointer;
+  position: relative;
+}
+
+.burger-item::before,
+.burger-item::after {
+  content: "";
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+}
+
+.burger-item::before {
+  width: 30px;
+  top: -8px;
+}
+
+.burger-item::after {
+  width: 26px;
+  bottom: -8px;
+}
+
 /* Login
 =========================== */
 .login {
   height: 100px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 /* Buttons
@@ -618,7 +703,9 @@ h6 {
 }
 
 .btn__domains {
-  padding: 18px 28px;
+  height: 50px;
+  width: 140px;
+  padding: 0;
   font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
@@ -626,6 +713,17 @@ h6 {
 }
 .btn__domains:hover {
   background-color: #d82a1a;
+}
+@media (max-width: 575px) {
+  .btn__domains {
+    width: 100px;
+  }
+}
+@media (max-width: 400px) {
+  .btn__domains {
+    width: 90px;
+    font-size: 12px;
+  }
 }
 
 .btn--plan-item {
@@ -660,6 +758,11 @@ h6 {
 }
 .btn--blog:hover {
   background-color: #e84c3d;
+}
+@media (max-width: 400px) {
+  .btn--blog {
+    width: 150px;
+  }
 }
 
 .btn--subscribe {
@@ -734,6 +837,7 @@ h6 {
 }
 
 .intro__slider-photo {
+  width: 100%;
   height: 100%;
   max-height: 583px;
 }
@@ -741,6 +845,9 @@ h6 {
 .intro__inner {
   position: relative;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .intro__title {
@@ -752,9 +859,14 @@ h6 {
   color: #fff;
   text-align: center;
 }
+@media (max-width: 400px) {
+  .intro__title {
+    font-size: 30px;
+  }
+}
 
 .intro__text {
-  margin: 0 auto 40px;
+  margin-bottom: 40px;
   max-width: 480px;
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
@@ -765,7 +877,7 @@ h6 {
 }
 
 .intro__learn-more {
-  display: block;
+  display: inline-block;
   margin-top: 25px;
   font-family: "PT Sans", sans-serif;
   font-size: 12px;
@@ -788,6 +900,8 @@ h6 {
 
 .hosting-main-features__item {
   width: 100%;
+  max-width: 313px;
+  margin: 0 auto;
   padding: 60px 0;
   display: flex;
   align-items: center;
@@ -797,6 +911,11 @@ h6 {
 }
 .hosting-main-features__item:hover {
   background-color: #272b33;
+}
+@media (max-width: 575px) {
+  .hosting-main-features__item {
+    padding: 30px 0;
+  }
 }
 
 .hosting-main-features__title {
@@ -810,6 +929,11 @@ h6 {
   text-align: center;
   text-transform: uppercase;
 }
+@media (max-width: 992px) {
+  .hosting-main-features__title {
+    font-size: 16px;
+  }
+}
 
 .hosting-main-features__text {
   margin-bottom: 30px;
@@ -819,6 +943,11 @@ h6 {
   line-height: 1.25;
   color: #6f798c;
   text-align: center;
+}
+@media (max-width: 992px) {
+  .hosting-main-features__text {
+    font-size: 14px;
+  }
 }
 
 .hosting-main-features__img {
@@ -857,6 +986,11 @@ h6 {
   color: #000;
   text-align: center;
   text-transform: capitalize;
+}
+@media (max-width: 400px) {
+  .domains__title {
+    font-size: 35px;
+  }
 }
 
 .domains__text {
@@ -897,6 +1031,7 @@ h6 {
 ========================== */
 .form {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 40px;
 }
@@ -907,6 +1042,16 @@ h6 {
   align-items: center;
   justify-content: flex-end;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
+}
+@media (max-width: 768px) {
+  .form--subscribe {
+    justify-content: center;
+  }
+}
+@media (max-width: 575px) {
+  .form--subscribe {
+    border-left: none;
+  }
 }
 
 .form__group {
@@ -921,6 +1066,34 @@ h6 {
   height: 40px;
   background: none;
 }
+@media (max-width: 400px) {
+  .form__group--subscribe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.form__text {
+  font-family: "PT Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #fff;
+  text-transform: uppercase;
+}
+@media (max-width: 768px) {
+  .form__text {
+    font-size: 11px;
+    text-align: center;
+  }
+}
+@media (max-width: 400px) {
+  .form__text {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
 
 .input {
   height: 50px;
@@ -933,12 +1106,38 @@ h6 {
   border: 0;
   outline: 0;
 }
+@media (max-width: 768px) {
+  .input {
+    width: 300px;
+  }
+}
+@media (max-width: 575px) {
+  .input {
+    width: 190px;
+  }
+}
+@media (max-width: 400px) {
+  .input {
+    width: 90px;
+    font-size: 14px;
+  }
+}
 
 .input--subscribe {
   height: 40px;
   width: 295px;
   font-size: 14px;
   color: #2c3039;
+}
+@media (max-width: 992px) {
+  .input--subscribe {
+    width: 240px;
+  }
+}
+@media (max-width: 768px) {
+  .input--subscribe {
+    width: 140px;
+  }
 }
 
 .select {
@@ -952,12 +1151,28 @@ h6 {
   border: 0;
   outline: 0;
 }
+@media (max-width: 575px) {
+  .select {
+    width: 65px;
+  }
+}
+@media (max-width: 400px) {
+  .select {
+    width: 60px;
+    font-size: 14px;
+  }
+}
 
 .features {
   width: 100%;
   padding-bottom: 100px;
   padding-top: 70px;
   background-color: #2c3039;
+}
+@media (max-width: 575px) {
+  .features {
+    padding: 40px 0;
+  }
 }
 
 .features__title {
@@ -987,6 +1202,7 @@ h6 {
 }
 
 .features__item-text {
+  margin-bottom: 30px;
   font-family: "PT Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -1035,6 +1251,37 @@ h6 {
   color: #2c3039;
   text-align: center;
   border: 1px solid rgba(190, 190, 190, 0.5);
+}
+
+.plan-item--small {
+  max-width: 235px;
+}
+
+@media (max-width: 768px) {
+  .plan-item--right {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.plan-item--left {
+  margin-left: auto;
+}
+@media (max-width: 575px) {
+  .plan-item--left {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.plan-item--middle {
+  max-width: 314px;
+}
+@media (max-width: 575px) {
+  .plan-item--middle {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .plan-item__title {
@@ -1097,8 +1344,7 @@ h6 {
 }
 
 .plan-item__header {
-  padding-top: 25px;
-  padding-bottom: 15px;
+  padding: 25px 10px 15px;
 }
 
 .plan-item__body {
@@ -1158,13 +1404,11 @@ h6 {
   overflow: hidden;
   background: #fff;
 }
-.testimonials__slider .slick-initialized {
+.testimonials__slider.slick-initialized {
   height: auto;
 }
 
 .testimonials__item {
-  height: 327px;
-  overflow: hidden;
   background-color: #fff;
 }
 
@@ -1254,12 +1498,23 @@ h6 {
 }
 
 .article__title {
+  display: block;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 400;
   color: #000;
   line-height: 1.3;
   text-align: left;
+  text-decoration: none;
+  transition: color 0.2s linear;
+}
+.article__title:hover {
+  color: #e84c3d;
+}
+@media (max-width: 575px) {
+  .article__title {
+    font-size: 16px;
+  }
 }
 
 .article__date {
@@ -1270,6 +1525,12 @@ h6 {
   line-height: 2.5;
   color: #5e5e5e;
 }
+@media (max-width: 400px) {
+  .article__date {
+    margin-right: 0px;
+    display: block;
+  }
+}
 
 .article__comments,
 .article__likes {
@@ -1279,6 +1540,12 @@ h6 {
   font-weight: 700;
   color: #000;
   line-height: 2.5;
+}
+@media (max-width: 400px) {
+  .article__comments,
+  .article__likes {
+    margin-right: 10px;
+  }
 }
 
 .article__content {
@@ -1302,6 +1569,8 @@ h6 {
   color: #d82a1a;
 }
 
+/* Contacts
+============================== */
 .contacts {
   position: relative;
   z-index: 1;
@@ -1313,6 +1582,16 @@ h6 {
 .contacts > iframe:hover {
   opacity: 1;
 }
+@media (max-width: 992px) {
+  .contacts > iframe {
+    opacity: 1;
+  }
+}
+@media (max-width: 575px) {
+  .contacts > iframe {
+    display: none;
+  }
+}
 
 .contacts__inner {
   max-width: 450px;
@@ -1321,9 +1600,19 @@ h6 {
   background-color: rgba(255, 255, 255, 0.8);
   position: absolute;
   top: 50%;
-  left: 20%;
+  left: 50%;
   z-index: 2;
-  transform: translateY(-50%);
+  transform: translate(-100%, -50%);
+}
+@media (max-width: 575px) {
+  .contacts__inner {
+    max-width: 100%;
+    position: relative;
+    left: 0;
+    top: 0;
+    transform: translate(0, 0);
+    text-align: center;
+  }
 }
 
 .contacts__title {
@@ -1333,6 +1622,26 @@ h6 {
   font-weight: 300;
   line-height: 1.3;
   color: #000;
+}
+@media (max-width: 768px) {
+  .contacts__title {
+    font-size: 25px;
+  }
+}
+
+.contacts__suptitle {
+  display: none;
+  margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 1.3;
+  color: #000;
+}
+@media (max-width: 575px) {
+  .contacts__suptitle {
+    display: block;
+  }
 }
 
 .contacts__address {
@@ -1377,10 +1686,22 @@ h6 {
 .contacts__mail:hover {
   text-decoration: underline;
 }
+@media (max-width: 575px) {
+  .contacts__mail {
+    display: block;
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+}
 
 .subscribe {
   width: 100%;
   background-color: #2c3039;
+}
+@media (max-width: 575px) {
+  .subscribe {
+    padding: 20px 0;
+  }
 }
 
 .subscribe__text {
@@ -1391,9 +1712,30 @@ h6 {
   color: #fff;
   text-transform: uppercase;
 }
+@media (max-width: 768px) {
+  .subscribe__text {
+    font-size: 11px;
+    text-align: center;
+  }
+}
+
+.subscribe__social {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+@media (max-width: 575px) {
+  .subscribe__social {
+    padding: 10px 0;
+    justify-content: center;
+  }
+}
 
 .subscribe__social-link {
-  margin-right: 28px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
 }
 
@@ -1406,6 +1748,8 @@ h6 {
   opacity: 1;
 }
 
+/* Footer
+==================================== */
 .footer {
   width: 100%;
   padding: 25px 0 20px;
@@ -1420,6 +1764,11 @@ h6 {
   color: #000;
   text-transform: uppercase;
 }
+@media (max-width: 575px) {
+  .footer__title {
+    text-align: center;
+  }
+}
 
 .footer__link {
   display: block;
@@ -1432,6 +1781,11 @@ h6 {
 }
 .footer__link:hover {
   text-decoration: underline;
+}
+@media (max-width: 575px) {
+  .footer__link {
+    text-align: center;
+  }
 }
 
 .footer__tel {
@@ -1447,6 +1801,16 @@ h6 {
 .footer__tel:hover {
   text-decoration: underline;
 }
+@media (max-width: 768px) {
+  .footer__tel {
+    margin-top: 20px;
+  }
+}
+@media (max-width: 575px) {
+  .footer__tel {
+    text-align: center;
+  }
+}
 
 .footer__email {
   display: inline-block;
@@ -1461,6 +1825,12 @@ h6 {
 .footer__email:hover {
   text-decoration: underline;
 }
+@media (max-width: 575px) {
+  .footer__email {
+    display: block;
+    text-align: center;
+  }
+}
 
 .footer__copyright {
   font-family: "PT Sans", sans-serif;
@@ -1468,4 +1838,9 @@ h6 {
   font-weight: 400;
   line-height: 1.7;
   color: #2c3039;
+}
+@media (max-width: 575px) {
+  .footer__copyright {
+    text-align: center;
+  }
 }/*# sourceMappingURL=style.css.map */
