--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,6 +47,7 @@ h6 {
 @import 'blocks/header';
 @import 'blocks/logo';
 @import 'blocks/nav';
+@import 'blocks/burger';
 @import 'blocks/login';
 @import 'blocks/btn';
 @import 'blocks/intro';
