--- a/assets/css/blocks/_article.scss
+++ b/assets/css/blocks/_article.scss
@@ -15,12 +15,25 @@
 }
 
 .article__title {
+	display: block;
+
 	font-family: $font-Roboto;
 	font-size: 18px;
 	font-weight: 400;
 	color: #000;
 	line-height: 1.3;
 	text-align: left;
+	text-decoration: none;
+
+	transition: color 0.2s linear;
+
+	&:hover {
+		color: $color-secondary;
+	}
+
+	@media #{$breakpoint-576} {
+		font-size: 16px;
+	}
 }
 .article__date {
 	margin-right: 30px;
@@ -30,6 +43,11 @@
 	font-weight: 400;
 	line-height: 2.5;
 	color: #5e5e5e;
+
+	@media #{$breakpoint-400} {
+		margin-right: 0px;
+		display: block;
+	}
 }
 .article__comments,
 .article__likes {
@@ -40,6 +58,10 @@
 	font-weight: 700;
 	color: #000;
 	line-height: 2.5;
+
+	@media #{$breakpoint-400} {
+		margin-right: 10px;
+	}
 }
 
 .article__content {
