--- a/assets/css/blocks/_contacts.scss
+++ b/assets/css/blocks/_contacts.scss
@@ -1,3 +1,5 @@
+/* Contacts
+============================== */
 .contacts {
 	position: relative;
 	z-index: 1;
@@ -9,6 +11,14 @@
 
 		&:hover {
 			opacity: 1;
+		}
+
+		@media #{$breakpoint-992} {
+			opacity: 1;
+		}
+
+		@media #{$breakpoint-576} {
+			display: none;
 		}
 	}
 }
@@ -22,11 +32,23 @@
 
 	position: absolute;
 	top: 50%;
-	left: 20%;
+	left: 50%;
 	z-index: 2;
 
-	transform: translateY(-50%);
+	transform: translate(-100%, -50%);
+
+	@media #{$breakpoint-576} {
+		max-width: 100%;
+		position: relative;
+		left: 0;
+		top: 0;
+
+		transform: translate(0, 0);
+
+		text-align: center;
+	}
 }
+
 .contacts__title {
 	margin-bottom: 30px;
 
@@ -35,6 +57,25 @@
 	font-weight: 300;
 	line-height: 1.3;
 	color: #000;
+
+	@media #{$breakpoint-768} {
+		font-size: 25px;
+	}
+}
+
+.contacts__suptitle {
+	display: none;
+	margin-bottom: 30px;
+
+	font-family: $font-Roboto;
+	font-size: 40px;
+	font-weight: 300;
+	line-height: 1.3;
+	color: #000;
+
+	@media #{$breakpoint-576} {
+		display: block;
+	}
 }
 
 .contacts__address {
@@ -63,5 +104,11 @@
 
 	&:hover {
 		text-decoration: underline;
+	}
+
+	@media #{$breakpoint-576} {
+		display: block;
+		margin-left: 0;
+		margin-bottom: 30px;
 	}
 }
