--- a/assets/css/blocks/_grid.scss
+++ b/assets/css/blocks/_grid.scss
@@ -11,7 +11,6 @@
 }
 
 .row {
-	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -28,7 +27,13 @@
 }
 
 .justify-content-center {
-	justify-content: center;
+	justify-content: center !important;
+}
+
+.md-display-none {
+	@media #{$breakpoint-768} {
+		display: none;
+	}
 }
 
 @for $i from 1 to $columns + 1 {
@@ -46,6 +51,19 @@
 			padding-left: 10px;
 			padding-right: 10px;
 		}
+	}
+
+	.lg-order-1 {
+		order: 1;
+	}
+	.lg-order-2 {
+		order: 2;
+	}
+	.lg-order-3 {
+		order: 3;
+	}
+	.lg-order-4 {
+		order: 4;
 	}
 }
 
