--- a/assets/css/blocks/_hosting-main-features.scss
+++ b/assets/css/blocks/_hosting-main-features.scss
@@ -8,6 +8,8 @@
 
 .hosting-main-features__item {
 	width: 100%;
+	max-width: 313px;
+	margin: 0 auto;
 	padding: 60px 0;
 	display: flex;
 	align-items: center;
@@ -18,6 +20,10 @@
 
 	&:hover {
 		background-color: #272b33;
+	}
+
+	@media #{$breakpoint-576} {
+		padding: 30px 0;
 	}
 }
 
@@ -32,6 +38,10 @@
 	color: $color-primary;
 	text-align: center;
 	text-transform: uppercase;
+
+	@media #{$breakpoint-992} {
+		font-size: 16px;
+	}
 }
 .hosting-main-features__text {
 	margin-bottom: 30px;
@@ -42,6 +52,10 @@
 	line-height: 1.25;
 	color: #6f798c;
 	text-align: center;
+
+	@media #{$breakpoint-992} {
+		font-size: 14px;
+	}
 }
 
 .hosting-main-features__img {
