Fix <btn> classes and Add mixin <PTSans> everywere

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -7,6 +7,7 @@ $color-secondary: #e84c3d;
 $color-third: #2c3039;
 $columns: 12;
 $grid-width: 940px;
+$gutter: 10px;
 
 $breakpoint-992: '(max-width: 992px)';
 $breakpoint-768: '(max-width: 768px)';
