--- a/assets/css/blocks/_plan.scss
+++ b/assets/css/blocks/_plan.scss
@@ -13,11 +13,7 @@
 .plan__text {
 	margin-bottom: 40px;
 
-	font-family: $font-PTSans;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.25;
-	color: #000;
+	@include PTSans(16px, 400, 1.25, #000);
 	text-align: center;
 }
 
