--- a/assets/css/blocks/_article.scss
+++ b/assets/css/blocks/_article.scss
@@ -38,11 +38,7 @@
 .article__date {
 	margin-right: 30px;
 
-	font-family: $font-PTSans;
-	font-size: 12px;
-	font-weight: 400;
-	line-height: 2.5;
-	color: #5e5e5e;
+	@include PTSans(12px, 400, 2.5, #5e5e5e);
 
 	@media #{$breakpoint-400} {
 		margin-right: 0px;
@@ -53,11 +49,7 @@
 .article__likes {
 	margin-right: 20px;
 
-	font-family: $font-PTSans;
-	font-size: 12px;
-	font-weight: 700;
-	color: #000;
-	line-height: 2.5;
+	@include PTSans(12px, 700, 2.5, #000);
 
 	@media #{$breakpoint-400} {
 		margin-right: 10px;
@@ -65,11 +57,7 @@
 }
 
 .article__content {
-	font-family: $font-PTSans;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 1.4;
-	color: #000;
+	@include PTSans(14px, 400, 1.4, #000);
 }
 
 .article__img {
