--- a/assets/css/blocks/_domains.scss
+++ b/assets/css/blocks/_domains.scss
@@ -23,10 +23,7 @@
 	max-width: 600px;
 	margin: 0 auto 35px;
 
-	font-family: $font-PTSans;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.25;
+	@include PTSans(16px, 400, 1.25, #000);
 	text-align: center;
 }
 
@@ -38,18 +35,11 @@
 .domains__step {
 	margin-bottom: 10px;
 
-	font-family: $font-PTSans;
-	font-size: 14px;
-	font-weight: 700;
-	line-height: 1.3;
+	@include PTSans(14px, 700, 1.3, #000);
 	text-align: left;
 	text-transform: uppercase;
 }
 .domains__step-description {
-	font-family: $font-PTSans;
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 1.4;
-	color: #5e5e5e;
+	@include PTSans(14px, 400, 1.4, #5e5e5e);
 	text-align: left;
 }
