--- a/assets/css/blocks/_form.scss
+++ b/assets/css/blocks/_form.scss
@@ -66,9 +66,7 @@
 	margin: 0;
 	padding: 0;
 
-	font-family: $font-PTSans;
-	font-size: 16px;
-	font-weight: 400;
+	@include PTSans(16px, 400, 1, #000);
 
 	border: 0;
 	outline: 0;
@@ -109,9 +107,7 @@
 	width: 80px;
 	padding: 0;
 
-	font-family: $font-PTSans;
-	font-size: 16px;
-	font-weight: 400;
+	@include PTSans(16px, 400, 1, #000);
 
 	background-color: #fff;
 	border: 0;
