--- a/assets/css/blocks/_grid.scss
+++ b/assets/css/blocks/_grid.scss
@@ -7,15 +7,15 @@
 	height: 100%;
 	max-width: $grid-width;
 	margin: 0 auto;
-	padding: 0 10px;
+	padding: 0 $gutter;
 }
 
 .row {
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	margin-left: -10px;
-	margin-right: -10px;
+	margin-left: -$gutter;
+	margin-right: -$gutter;
 }
 
 .align-items-start {
@@ -39,8 +39,8 @@
 @for $i from 1 to $columns + 1 {
 	.col-#{$i} {
 		width: math.div($i, $columns) * 100%;
-		padding-left: 10px;
-		padding-right: 10px;
+		padding-left: $gutter;
+		padding-right: $gutter;
 	}
 }
 
@@ -48,8 +48,8 @@
 	@for $i from 1 to $columns + 1 {
 		.col-lg-#{$i} {
 			width: math.div($i, $columns) * 100%;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: $gutter;
+			padding-right: $gutter;
 		}
 	}
 
@@ -71,8 +71,8 @@
 	@for $i from 1 to $columns + 1 {
 		.col-md-#{$i} {
 			width: math.div($i, $columns) * 100%;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: $gutterx;
+			padding-right: $gutter;
 		}
 	}
 }
@@ -81,8 +81,8 @@
 	@for $i from 1 to $columns + 1 {
 		.col-sm-#{$i} {
 			width: math.div($i, $columns) * 100%;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: $gutter;
+			padding-right: $gutter;
 		}
 	}
 }
@@ -91,8 +91,8 @@
 	@for $i from 1 to $columns + 1 {
 		.col-xs-#{$i} {
 			width: math.div($i, $columns) * 100%;
-			padding-left: 10px;
-			padding-right: 10px;
+			padding-left: $gutter;
+			padding-right: $gutter;
 		}
 	}
 }
