--- a/assets/css/blocks/_testimonials.scss
+++ b/assets/css/blocks/_testimonials.scss
@@ -70,11 +70,7 @@
 .testimonials__subtitle {
 	margin-bottom: 40px;
 
-	font-family: $font-PTSans;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.9;
-	color: #000;
+	@include PTSans(16px, 400, 1.9, #000);
 	text-align: center;
 }
 
@@ -86,11 +82,7 @@
 	max-width: 755px;
 	margin: 0 auto 25px;
 
-	font-family: $font-PTSans;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.5;
-	color: #000;
+	@include PTSans(16px, 400, 1.5, #000);
 	text-align: center;
 }
 .testimonials__img {
@@ -104,10 +96,6 @@
 .testimonials__author {
 	margin-bottom: 50px;
 
-	font-family: $font-PTSans;
-	font-size: 12px;
-	font-weight: 400;
-	line-height: 1.6;
-	color: #5e5e5e;
+	@include PTSans(12px, 400, 1.6, #5e5e5e);
 	text-align: center;
 }
