--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,16 @@ h6 {
   box-sizing: border-box;
 }
 
+/* Page
+================================== */
+.page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
 /* Vendors
 ============================ */
 /* Slider */
@@ -530,11 +540,6 @@ h6 {
   left: 0;
   z-index: 100;
 }
-@media (max-width: 992px) {
-  .header {
-    background-color: rgba(0, 0, 0, 0.9);
-  }
-}
 
 .header--fixed {
   position: fixed;
@@ -596,7 +601,7 @@ h6 {
 }
 @media (max-width: 992px) {
   .nav {
-    width: 100%;
+    width: 0;
     height: 100%;
     padding-bottom: 100px;
     min-height: calc(100vh - 100px);
@@ -616,6 +621,7 @@ h6 {
 }
 .nav.show {
   display: flex;
+  width: 100%;
   transform: translateX(0);
 }
 .nav.show .nav__link {
@@ -713,48 +719,46 @@ h6 {
   transition: color 0.2s linear, background 0.2s linear;
 }
 
-.btn__login {
+.btn--login {
   padding: 15px 30px;
   border: 1px solid #e84c3d;
 }
-.btn__login:hover {
+.btn--login:hover {
   color: #e84c3d;
   background: #fff;
 }
 
-.btn__intro {
+.btn--intro {
   display: block;
   margin: 0 auto;
   padding: 18px 69px;
   font-size: 14px;
   font-weight: 700;
-  text-transform: uppercase;
   background-color: #e84c3d;
 }
-.btn__intro:hover {
+.btn--intro:hover {
   color: #e84c3d;
   background-color: #fff;
 }
 
-.btn__domains {
+.btn--domains {
   height: 50px;
   width: 140px;
   padding: 0;
   font-size: 14px;
   font-weight: 700;
-  text-transform: uppercase;
   background-color: #e84c3d;
 }
-.btn__domains:hover {
+.btn--domains:hover {
   background-color: #d82a1a;
 }
 @media (max-width: 575px) {
-  .btn__domains {
+  .btn--domains {
     width: 100px;
   }
 }
 @media (max-width: 400px) {
-  .btn__domains {
+  .btn--domains {
     width: 90px;
     font-size: 12px;
   }
@@ -805,7 +809,6 @@ h6 {
   padding: 12px 20px;
   font-size: 12px;
   font-weight: 700;
-  text-transform: uppercase;
   background-color: #e84c3d;
 }
 .btn--subscribe:hover {
@@ -1034,6 +1037,7 @@ h6 {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.25;
+  color: #000;
   text-align: center;
 }
 
@@ -1048,6 +1052,7 @@ h6 {
   font-size: 14px;
   font-weight: 700;
   line-height: 1.3;
+  color: #000;
   text-align: left;
   text-transform: uppercase;
 }
@@ -1137,6 +1142,8 @@ h6 {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1;
+  color: #000;
   border: 0;
   outline: 0;
 }
@@ -1181,6 +1188,8 @@ h6 {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1;
+  color: #000;
   background-color: #fff;
   border: 0;
   outline: 0;
@@ -1572,8 +1581,8 @@ h6 {
   font-family: "PT Sans", sans-serif;
   font-size: 12px;
   font-weight: 700;
-  color: #000;
   line-height: 2.5;
+  color: #000;
 }
 @media (max-width: 400px) {
   .article__comments,
