--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,17 @@ h6 {
 *::before {
 	box-sizing: border-box;
 }
+
+/* Page
+================================== */
+.page {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	overflow: hidden;
+}
+
 /* Vendors
 ============================ */
 @import 'vendor/slick';
